<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_ffffff"
    tools:context=".fragment.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/name"
        android:layout_width="@dimen/dp_201"
        android:layout_height="@dimen/dp_22"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_73"
        android:lineSpacingExtra="@dimen/dp_22"
        android:text="@string/login"
        android:textColor="@color/c_fa6a13"
        android:textSize="@dimen/sp_16" />


    <TextView
        android:id="@+id/lvxing"
        android:layout_width="@dimen/dp_198"
        android:layout_height="@dimen/dp_38"
        android:layout_below="@id/name"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_9"
        android:text="@string/login1"
        android:textColor="@color/c_373737"
        android:textSize="@dimen/sp_28" />

    <ImageView
        android:id="@+id/shouji"
        android:layout_width="@dimen/dp_14"
        android:layout_height="@dimen/dp_21"
        android:layout_below="@id/lvxing"
        android:layout_marginLeft="@dimen/dp_31"
        android:layout_marginTop="@dimen/dp_110"
        android:src="@drawable/phone" />

    <TextView
        android:id="@+id/show"
        android:layout_width="@dimen/dp_28"
        android:layout_height="@dimen/dp_20"
        android:layout_below="@id/lvxing"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_110"
        android:layout_toRightOf="@id/shouji"
        android:lineSpacingExtra="@dimen/dp_20"
        android:text="@string/login2"
        android:textColor="@color/c_636363"
        android:textSize="@dimen/sp_14" />

    <EditText
        android:id="@+id/ed"
        android:layout_width="@dimen/dp_118"
        android:layout_height="@dimen/dp_30"
        android:layout_below="@id/lvxing"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_106"
        android:layout_toRightOf="@id/show"
        android:background="@null"
        android:digits="1234567890"
        android:hint="@string/login3"
        android:inputType="number"
        android:textColor="@color/c_c8c8c8"
        android:textSize="@dimen/sp_16" />

    <Button
        android:id="@+id/but"
        android:layout_width="@dimen/dp_90"
        android:layout_height="@dimen/dp_30"
        android:layout_below="@id/lvxing"
        android:layout_marginLeft="@dimen/dp_19"
        android:layout_marginTop="@dimen/dp_106"
        android:layout_toRightOf="@id/ed"
        android:background="@drawable/shape"
        android:text="@string/login5"
        android:textColor="@color/c_ffffff"
        android:textSize="@dimen/dp_10" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="@dimen/dp_329"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@id/ed"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_9"
        android:background="@color/c_fa6a13"
        android:src="@drawable/button_highlight" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:layout_marginTop="@dimen/dp_85"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/qq"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:src="@drawable/umeng_socialize_qq" />

        <ImageView
            android:id="@+id/wechat"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:src="@drawable/wechat" />

        <ImageView
            android:id="@+id/sina"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:src="@drawable/umeng_socialize_sina" />
    </LinearLayout>

    <TextView
        android:id="@+id/welogin"
        android:layout_width="@dimen/dp_51"
        android:layout_height="@dimen/dp_17"
        android:layout_below="@id/linear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_9"
        android:text="@string/login6"
        android:textColor="@color/c_4dae46"
        android:textSize="@dimen/dp_12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="@string/login7"
        android:textColor="@color/c_999999"
        android:textSize="@dimen/dp_13" />
</RelativeLayout>